--- a/src/main/resources/templates/edit-reservation.html
+++ b/src/main/resources/templates/edit-reservation.html
@@ -50,6 +50,7 @@
                         <div class="input-field col s4">
                             <select th:field="*{type}" th:selected="${reservation.type}">
                                 <option value="" enabled selected>Choose your option</option>
+                                <option value="Flight">Flight</option>
                                 <option value="Train">Train</option>
                                 <option value="Ferry">Ferry</option>
                                 <option value="Bus">Bus</option>
